tests/invalid/module/user_core_reserved.facet
mod core {
  fn nope() -> unrestricted () {
    ()
  }
}
